<resources>
    <string name="app_name">PawKeeper</string>
    <string name="str_login">Log In</string>
    <string name="str_logOut">Log Out</string>
    <string name="msg_login">Please sign in to your existing account</string>
    <string name="msg_signUp">Please sign up to get started</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_email">EMAIL</string>
    <string name="str_hintEmail">Enter email</string>
    <string name="str_password">PASSWORD</string>
    <string name="msg_enter_password">Enter password</string>
    <string name="msg_don_t_have_an_account">Don\'t have an account ?</string>
    <string name="str_space_sign_up">"  SIGN UP"</string>
    <string name="str_full_name">FULL NAME</string>
    <string name="str_enter_full_name">Enter full name</string>
    <string name="str_user_name">USER NAME</string>
    <string name="str_enter_user_name">Enter user name</string>
    <string name="str_dd_mm_yyyy">DD / MM / YYYY</string>
    <string name="str_pet_dd_mm_yyyy">DD : MM : YYYY</string>
    <string name="str_date_of_birth">DATE OF BIRTH</string>
    <string name="str_re_type_password">RE-TYPE PASSWORD</string>
    <string name="msg_enter_confirm_password">Enter confirm password</string>
    <string name="user_detail">User Details</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="str_user_names">User Name</string>
    <string name="str_value_id">Id :%d</string>
    <string name="str_menuclick">menuClick</string>
    <string name="str_upload_pdf">Upload Pdf</string>
    <string name="str_here_is_uploaded_pdf">Here is uploaded pdf</string>
    <string name="str_imageupload">imageUpload</string>
    <string name="str_upload">Upload</string>
    <string name="str_home">Home</string>
    <string name="str_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_chose_pet_logo">Chose Pet Logo</string>
    <string name="str_pet_name">Pet Name</string>
    <string name="str_enter_pet_name">Enter pet name</string>
    <string name="str_add_pet">Add Pet</string>
    <string name="str_select_pet_type">Select Pet Type</string>
    <string name="str_no_type_selected">No type selected</string>
    <string name="str_ok_img">ok img</string>
    <string name="str_cancel_img">cancel img</string>
    <string name="str_skip">Skip</string>
    <string name="str_pet_date_of_birth_n_date_of_adopt">Pet Date Of Birth /\n Date Of Adopt</string>
    <string name="str_image_view_description">imageviewDescription</string>
    <string name="str_my_pets">My Pets</string>
    <string name="str_liked">Liked</string>
    <string name="str_like">Like</string>
    <string name="str_liked_pets">Liked Pets</string>
    <string name="str_unliked_pets">Unliked Pets</string>
    <string name="str_user_detail">User Detail</string>
    <string name="str_delete_acount">Delete Acount</string>
    <string name="str_id">Id : %d</string>
    <string name="str_edit_details">Edit Details</string>
    <string name="str_done">Done</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_close">Close</string>
    <string name="str_about_app">Streamlining pet care management with efficiency and ease.</string>
</resources>