<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/deepBlue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainCons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPageHead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/sen_extra_bold"
            android:gravity="center"
            android:text="@string/str_signup"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sen_medium"
            android:text="@string/msg_signUp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tvPageHead"
            app:layout_constraintStart_toStartOf="@id/tvPageHead"
            app:layout_constraintTop_toBottomOf="@id/tvPageHead" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:elevation="10dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintTop_toBottomOf="@id/mainCons">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingBottom="70dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/sen_medium"
                    android:text="@string/str_full_name"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintTop_toBottomOf="@id/tvFullName">

                    <EditText
                        android:id="@+id/edTvFullName"
                        android:layout_width="match_parent"
                        android:textColorHint="@color/black"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:autofillHints="name"
                        android:background="@color/bg_edTv"
                        android:fontFamily="@font/sen_regular"
                        android:gravity="center|start"
                        android:hint="@string/str_enter_full_name"
                        android:inputType="textPersonName"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sen_medium"
                    android:text="@string/str_user_name"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/cardName"
                    app:layout_constraintTop_toBottomOf="@id/cardName" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardUserName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintTop_toBottomOf="@id/tvUserName">

                    <EditText
                        android:id="@+id/edTvUserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:autofillHints="name"
                        android:textColorHint="@color/black"
                        android:background="@color/bg_edTv"
                        android:fontFamily="@font/sen_regular"
                        android:gravity="center|start"
                        android:hint="@string/str_enter_user_name"
                        android:inputType="textPersonName"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sen_medium"
                    android:text="@string/str_email"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/cardUserName"
                    app:layout_constraintTop_toBottomOf="@id/cardUserName" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintTop_toBottomOf="@id/tvEmail">

                    <EditText
                        android:id="@+id/edTvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:autofillHints="emailAddress"
                        android:background="@color/bg_edTv"
                        android:fontFamily="@font/sen_regular"
                        android:gravity="center|start"
                        android:hint="@string/str_hintEmail"
                        android:textColorHint="@color/black"
                        android:inputType="textEmailAddress"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvDob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sen_medium"
                    android:text="@string/str_date_of_birth"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/cardEmail"
                    app:layout_constraintTop_toBottomOf="@id/cardEmail" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardDob"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="170dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintTop_toBottomOf="@id/tvDob">

                    <TextView
                        android:id="@+id/tvBtnDob"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/bg_edTv"
                        android:fontFamily="@font/sen_regular"
                        android:gravity="center"
                        android:text="@string/str_dd_mm_yyyy"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tvPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sen_medium"
                    android:text="@string/str_password"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/cardDob"
                    app:layout_constraintTop_toBottomOf="@id/cardDob" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintTop_toBottomOf="@id/tvPass">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/bg_edTv"
                        android:gravity="center"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edTvPassWord"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:autofillHints="password"
                            android:background="#0000"
                            android:fontFamily="@font/sen_regular"
                            android:textColorHint="@color/black"
                            android:gravity="center|start"
                            android:hint="@string/msg_enter_password"
                            android:inputType="textPassword"
                            android:paddingStart="15dp"
                            android:paddingEnd="5dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvCnfPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sen_medium"
                    android:text="@string/str_re_type_password"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/cardPass"
                    app:layout_constraintTop_toBottomOf="@id/cardPass" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardCnfPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintTop_toBottomOf="@id/tvCnfPass">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/bg_edTv"
                        android:gravity="center"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edTvCnfPassWord"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:autofillHints="password"
                            android:background="#0000"
                            android:fontFamily="@font/sen_regular"
                            android:gravity="center|start"
                            android:hint="@string/msg_enter_confirm_password"
                            android:inputType="textPassword"
                            android:paddingStart="15dp"
                            android:paddingEnd="5dp"
                            android:textColorHint="@color/black"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardBtnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintTop_toBottomOf="@id/cardCnfPass">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_primary"
                        android:fontFamily="@font/sen_semi_bold"
                        android:text="@string/str_signup"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
