<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepBlue"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/color_primary"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPageHead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/sen_extra_bold"
            android:gravity="center"
            android:text="@string/str_login"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sen_medium"
            android:text="@string/msg_login"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tvPageHead"
            app:layout_constraintStart_toStartOf="@id/tvPageHead"
            app:layout_constraintTop_toBottomOf="@id/tvPageHead" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMsg">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sen_medium"
                android:text="@string/str_email"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@id/tvEmail">

                <EditText
                    android:id="@+id/edTvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:autofillHints="emailAddress"
                    android:background="@color/bg_edTv"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="center|start"
                    android:hint="@string/str_hintEmail"
                    android:textColorHint="@color/black"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="LabelFor" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sen_medium"
                android:text="@string/str_password"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/cardLogIn"
                app:layout_constraintTop_toBottomOf="@id/cardLogIn" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@id/tvPass">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/bg_edTv"
                    android:gravity="center"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edTvPassWord"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:autofillHints="password"
                        android:background="#0000"
                        android:fontFamily="@font/sen_regular"
                        android:gravity="center|start"
                        android:hint="@string/msg_enter_password"
                        android:textColorHint="@color/black"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/cardPass">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_primary"
                    android:fontFamily="@font/sen_semi_bold"
                    android:text="@string/str_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/cardBtn"
                app:layout_constraintStart_toStartOf="@id/cardBtn"
                app:layout_constraintTop_toBottomOf="@id/cardBtn">

                <TextView
                    android:id="@+id/tvTittleSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sen_medium"
                    android:text="@string/msg_don_t_have_an_account"
                    app:layout_constraintStart_toStartOf="@id/cardBtn"
                    app:layout_constraintTop_toBottomOf="@id/cardBtn" />

                <TextView
                    android:id="@+id/tvBtnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sen_semi_bold"
                    android:text="@string/str_space_sign_up"
                    android:textColor="@color/color_primary"
                    app:layout_constraintStart_toEndOf="@id/tvTittleSignUp"
                    app:layout_constraintTop_toTopOf="@id/tvTittleSignUp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>